[project]
name = "laneful"
version = "1.0.0.dev0"
description = "Python client library for the Laneful API"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Laneful", email = "support@laneful.com"}
]
license = {text = "MIT"}
keywords = ["email", "api", "client", "laneful"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "aiohttp>=3.8.0",
    "requests>=2.28.0",
    "typing-extensions>=4.0.0;python_version<'3.10'",
]

[project.optional-dependencies]
# Only synchronous support
sync = [
    "requests>=2.28.0"
]
# Asynchronous support only
async = [
    "aiohttp>=3.8.0"
]
# Async-only (no sync dependencies) 
async-only = [
    "aiohttp>=3.8.0"
]
# Full support (both sync and async)
all = [
    "requests>=2.28.0",
    "aiohttp>=3.8.0"
]
# Development dependencies
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0", 
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    # Include both sync and async for testing
    "requests>=2.28.0",
    "aiohttp>=3.8.0"
]

[project.urls]
Homepage = "https://github.com/lanefulhq/laneful-python"
Repository = "https://github.com/lanefulhq/laneful-python"
Documentation = "https://github.com/lanefulhq/laneful-python#readme"
"Bug Tracker" = "https://github.com/lanefulhq/laneful-python/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["laneful"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py38"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pyyaml>=6.0.2",
]
